# P1

./: .gitignore  CMakeLists.txt  Normalpriser.txt  README.md  Readfile.c  readme.txt
compare/: CMakeLists.txt  generate.py  lib.c  lib.h  main.c
compare/files/: coordinates.csv  discounts.csv  normal_prices.csv  shopping_list.csv
src/: CMakeLists.txt  lib.c  lib.h  main.c
src/files/: coordinates.csv  discounts.csv  discounts.txt  distances.txt  normal_prices.csv  normal_prices.txt  shopping_list.csv  shopping_list.txt  user_location.csv
test/: CMakeLists.txt  tests.c
test/files/: discounts.txt  distances.txt  normal_prices.txt  shopping_list.txt
